--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,12 +16,16 @@
 </head>
 
 <body>
+    {{> _header}}
     <div class="container">
         {{{body}}}
     </div>
 
     {{!-- materialized JS --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+        M.Sidenav.init(document.querySelector('.sidenav'))
+    </script>
 </body>
 
 </html>
