--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,6 +17,7 @@
 
 <body>
     {{> _header}}
+    {{>_add_btn}}
     <div class="container">
         {{{body}}}
     </div>
@@ -25,6 +26,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
         M.Sidenav.init(document.querySelector('.sidenav'))
+        M.FormSelect.init(document.querySelector('#status'))
+        CKEDITOR.replace('body', {
+            plugins: 'wysiwygarea, toolbar, basicstyles, link'
+        })
     </script>
 </body>
 
